<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addAddressActivity">
    <TextView
        android:id="@+id/AandUtx"
        android:layout_width="200dp"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:text="@string/add_address_title"/>
<EditText
    android:id="@+id/Editadname"
    android:inputType="text"
    android:hint="@string/add_address_hint1"
    android:layout_width="200dp"
    android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/Editaddot"
        android:inputType="text"
        android:hint="@string/add_address_hint2"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/Editadtime"
        android:inputType="text"
        android:hint="@string/add_address_hint3"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/add_address_btn_submit"
        android:textSize="10dp"
        android:onClick="onClick"
        android:id="@+id/btn_submit"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>