<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/square_bdoy"
    android:layout_height="match_parent"
    tools:context=".showbodyActivity">
    <TextView
        android:id="@+id/showbodyttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:text="@string/showbody_epsname" />
    <TextView
        android:id="@+id/showbodydate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:text="@string/showbody_epsdate" />
    <TextView
        android:id="@+id/showbodytv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:textSize="16dp"
        android:text="@string/showbody_epsdetail" />
</LinearLayout>